Newest changes at the top
Format: MM/DD/YYYY HH:MM - comment  

02/14/2016 00:44 - Fixed image src displaying bot pieces
02/13/2016 21:20 - Updated changelog
02/13/2016 21:20 - Fixed commenting
02/13/2016 21:14 - Bot Assembly page completed
02/13/2016 21:02 - Homepage is now complete:
					-Player's name, peanuts, and equity now display and iterate
					 properly
					-The status panel shows all distinct pieces
02/13/2016 17:12 - Added equity function to player model
02/12/2016 15:06 - Implemented login functionality using CI sessions
02/11/2016 09:25 - Removed development file from tracking.
02/11/2016 16:32 - Added Portfolio page, with style and functionality
02/11/2016 09:41 - Fixed minor merge conflicts that the organization-user asked me to correct
02/10/2016 23:02 - Created subcontrollers with code stubs, and homepage layout exists
02/10/2016 10:49 - Created model classes for Players, Series, Transactions, and Collections
02/09/2016 14:27 - Created base controller
02/09/2016 13:50 - Added bot cards into the data folder
02/04/2016 18:07 - Created assets folder, data folders, and started _template.php
02/04/2016 15:01 - Reformatted and added to the README.md 
02/04/2016 14:38 - Fixed the system folder path
02/04/2016 14:20 - Added the starter package
02/04/2016 14:05 - Initial Setup