@@ -1,6 +1,7 @@
 Newest changes at the top
 Format: MM/DD/YYYY HH:MM - comment  
 
+02/14/2016 18:42 - Added styling to the Assembly page & minor fixes
 02/14/2016 00:44 - Fixed image src displaying bot pieces
 02/13/2016 21:20 - Updated changelog
 02/13/2016 21:20 - Fixed commenting
